[tool.poetry]
name = "pyplag"
version = "0.1.0"
description = "PyPlag is a plagiarism tool in Python, featuring various text comparison algorithms."
authors = ["sstroemer"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
